# Rust-Algorithms-to-WebAssembly

./: Cargo.toml  README.md  bootstrap.js  huffmanEncoding.html  index.html  primeNumbers.html  quickSort.html  sha256.html
scripts/: huffmanEncoding.js  primeNumbers.js  quickSort.js  sha256.js
src/: compute_sha256.rs  generate_primes.rs  huffman.rs  lib.rs  quick_sort.rs
styles/: main.css
