[package]
name = "wasm-project"
version = "0.1.0"
authors = ["Alexandru Rusmir <arusmir.business@gmail.com>"]
edition = "2018"
description = "A simple WebAssembly project using Rust and wasm-bindgen"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"

[profile.release]
opt-level = 3
